--- a/app/styles/bracket.scss
+++ b/app/styles/bracket.scss
@@ -65,6 +65,7 @@
 /* ------------------------------------------------------------- */
 @import "util/background";
 @import "util/border";
+@import "util/custom";
 @import "util/height";
 @import "util/hover";
 @import "util/margin";
